# Geo-Layout-Transformer

./: .gitignore  README.md  README_zh.md  TODO.md  main.py  pyproject.toml  requirements.txt
configs/: default.yaml  hotspot_detection.yaml
examples/: generate_sample_data.py  run_sample_flow.py  simple_layout.gds
logs/: events.out.tfevents.1770816771.jiao77-macdeMacBook-Air.local.70402.0  events.out.tfevents.1770817085.jiao77-macdeMacBook-Air.local.72789.0  events.out.tfevents.1770817175.jiao77-macdeMacBook-Air.local.73741.0  events.out.tfevents.1770817223.jiao77-macdeMacBook-Air.local.74546.0
logs/pretrain/: events.out.tfevents.1770817223.jiao77-macdeMacBook-Air.local.74546.1
reference/: Geo-Layout-Transformer.md  LayoutGMN_zh.md  images  技术路线图：基于几何图的版图Transformer (Geo-Layout Transformer).md
scripts/: preprocess_gds.py  visualize_attention.py
src/: init.py
src/data/: dataset.py  gds_parser.py  graph_constructor.py  init.py
src/engine/: evaluator.py  init.py  self_supervised.py  trainer.py
src/models/: geo_layout_transformer.py  gnn_encoder.py  init.py  task_heads.py  transformer_core.py
src/utils/: __init__.py  config_loader.py  init.py  logging.py  seed.py
tests/: test_model_run.py
