[project]
name = "geo-layout-transformer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gdstk>=0.9.61",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.7.1",
    "torch>=2.8.0",
    "torch-geometric>=2.6.1",
    "torchvision>=0.23.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
